--- a/web4test/src/main/webapp/edit/Edit.html
+++ b/web4test/src/main/webapp/edit/Edit.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="../pro/css/bootstrap-theme.css">
 
 <!-- 고유식:드래그 관련 js -->
-<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+<script type="text/javascript" src="../pro/js/jquery-1.11.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
 <script
 	src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
@@ -325,14 +325,7 @@
 							</div>
 						</div>
 
-						<div class="toolbar-add-block-option" data-block-type="code">
-							<div class="toolbar-code">
-								<span class="toolbar-add-block-option-icon icon i-file-css"></span>
-								<span class="toolbar-add-block-option-label"><i
-									class="fa fa-code fa-2x"></i><br> <br>Code</span>
-							</div>
-						</div>
-
+						
 						<div class="toolbar-add-block-option" data-block-type="math">
 							<div class="toolbar-math">
 								<span class="toolbar-add-block-option-icon icon i-divide"></span>
@@ -857,158 +850,7 @@
 
 
 
-
-
-
-					<!-- code -->
-					<div class="code-list">
-						<div class="toolbar-option toolbar-radio"
-							data-option-type="code-align" data-number-of-items="4">
-							<h4 class="toolbar-option-label">code Alignment</h4>
-							<div class="toolbar-radio-inner">
-								<div class="toolbar-radio-item" data-value="left">
-									<i class="fa fa-align-left"></i>
-								</div>
-								<div class="toolbar-radio-item" data-value="center">
-									<i class="fa fa-align-center"></i>
-								</div>
-								<div class="toolbar-radio-item" data-value="right">
-									<i class="fa fa-align-right"></i>
-								</div>
-								<div class="toolbar-radio-item" data-value="justify">
-									<i class="fa fa-align-justify"></i>
-								</div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-stepper"
-							data-option-type="code-size">
-							<h4 class="toolbar-option-label">code Scale</h4>
-							<div class="stepper">
-								<input class="font size-box" type=number value=20> <input
-									class="font size-scroll" type=range min="0" max="100" step="1">
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-						<div class="toolbar-option toolbar-color"
-							data-option-type="code-color">
-							<h4 class="toolbar-option-label">code Color</h4>
-							<div class="toolbar-color-trigger">
-								<input class="code-colorinput" type="color">
-								<div class="toolbar-color-reset icon i-undo"
-									data-tooltip="Use default color" data-tooltip-delay="500"></div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-color"
-							data-option-type="background-color">
-							<h4 class="toolbar-option-label">Background Color</h4>
-							<div class="toolbar-color-trigger transparent">
-								<input class="back-colorinput" type="color">
-								<div class="toolbar-color-reset icon i-undo"
-									data-tooltip="Use default color" data-tooltip-delay="500"></div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-range"
-							data-option-type="opacity">
-							<h4 class="toolbar-option-label">Opacity</h4>
-							<div class="range">
-								<input class="opacity size-box" type=number value=1.00>
-								<input class="opacity size-scroll" type=range min="0" max="100"
-									step="1">
-							</div>
-						</div>
-						<div id="padding" class="toolbar-option toolbar-stepper"
-							data-option-type="padding">
-							<h4 class="toolbar-option-label">Padding</h4>
-							<div class="stepper">
-								<input class="padding size-box" type=number> <input
-									class="padding size-scroll" type=range min="0" max="100"
-									step="1">
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-						<div class="toolbar-option toolbar-group"
-							data-group-type="border-css">
-							<div class="code-toolbar-group-trigger">
-								<span class="label">Border</span><span
-									class="checkbox icon i-checkmark"> </span>
-							</div>
-							<div class="code-toolbar-group-options">
-								<div class="code-toolbar-group-options-inner">
-									<div class="toolbar-option toolbar-select"
-										data-option-type="border-style">
-										<h4 class="toolbar-option-label">Style</h4>
-										<div class="code-toolbar-select-trigger">Solid</div>
-									</div>
-									<div class="toolbar-option toolbar-stepper"
-										data-option-type="border-width">
-										<h4 class="toolbar-option-label">Width</h4>
-										<div class="stepper">
-											<input type="code" class="stepper-number">
-										</div>
-									</div>
-									<div class="toolbar-option toolbar-stepper"
-										data-option-type="border-radius">
-										<h4 class="toolbar-option-label">Radius</h4>
-										<div class="stepper">
-											<input type="code" class="stepper-number">
-										</div>
-									</div>
-									<div class="toolbar-option toolbar-color"
-										data-option-type="border-color">
-										<h4 class="toolbar-option-label">Color</h4>
-										<div class="toolbar-color-trigger">
-
-											<input class="code-border-colorinput" type="color">
-											<div class="toolbar-color-reset icon i-undo"
-												data-tooltip="Use default color" data-tooltip-delay="500"></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-						<div class="toolbar-option toolbar-multi"
-							data-option-type="block-depth" data-number-of-items="2">
-							<h4 class="toolbar-option-label">Depth</h4>
-							<div class="toolbar-multi-inner">
-								<div class="toolbar-multi-item" data-value="back"
-									data-tooltip="Move to back">
-									<i class="fa fa-arrow-down fa-2x"></i>
-								</div>
-								<div class="toolbar-multi-item" data-value="front"
-									data-tooltip="Move to front">
-									<i class="fa fa-arrow-up fa-2x"></i>
-								</div>
-							</div>
-						</div>
-						<div class="toolbar-option toolbar-multi"
-							data-option-type="block-actions" data-number-of-items="3">
-							<h4 class="toolbar-option-label">Actions</h4>
-							<div class="toolbar-multi-inner">
-								<div class="toolbar-multi-item" data-value="html"
-									data-tooltip="Edit HTML">
-									<i class="fa fa-edit fa-2x"></i>
-								</div>
-								<div class="toolbar-multi-item" data-value="duplicate"
-									data-tooltip="Duplicate">
-									<i class="fa fa-clipboard fa-2x"></i>
-								</div>
-								<div class="toolbar-multi-item" data-value="delete"
-									data-tooltip="Delete">
-									<i class="fa fa-trash fa-2x"></i>
-								</div>
-							</div>
-						</div>
-					</div>
-
-
-
-
-
-
+					
 
 					<!-- math -->
 					<div class="math-list">
@@ -1207,16 +1049,6 @@
 			<div class="toolbar-panel-arrow" style="top: 15px;"></div>
 		</div>
 
-		<!-- code -->
-		<div class="code-toolbar-panel" data-panel-type="select">
-			<div class="toolbar-panel-content"
-				style="width: auto; height: auto; max-height: 300px;">
-				<div class="code-toolbar-select-item1" data-value="solid">Solid</div>
-				<div class="code-toolbar-select-item2" data-value="dashed">Dashed</div>
-				<div class="code-toolbar-select-item3" data-value="dotted">Dotted</div>
-			</div>
-			<div class="toolbar-panel-arrow" style="top: 15px;"></div>
-		</div>
 
 		<!-- math -->
 		<div class="math-toolbar-panel" data-panel-type="select">
