--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -24,11 +24,11 @@
 <!-- 정준호:이미지 업로드js -->
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
+    src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/jquery.iframe-transport.js"></script>
+    src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/jquery.fileupload.js"></script>
+    src="js/jquery-fileupload/jquery.fileupload.js"></script>
 <script type="text/javascript" src="js/myuploadfunction.js"></script>
 
 <!-- 우인규 바탕 코드 -->
