--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -34,11 +34,11 @@
 <!-- 우인규 바탕 코드 -->
 <script src="js/Edit.js"></script>
 <!--이혜인 text 코드  -->
-<script src="../pro/js/text.js"></script>
+<script src="js/text.js"></script>
 <!-- 고유식 코드 shape, 기본 코드-->
-<script src="../pro/js/test09.js"></script>
+<script src="js/test09.js"></script>
 <!-- 정준호:이미지 업로드js -->
-<script src="../pro/js/myuploadfunction.js"></script>
+<script src="js/myuploadfunction.js"></script>
 
 <style type="text/css">
 .pnt {
