--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -10,6 +10,10 @@
 <!-- 정준호:이미지 업로드css -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
+<script src="js/myuploadfunction.js"></script> <!-- 정준호:이미지 업로드js -->
+    
+<!-- 우인규 : 기본 바탕js -->
+<script src="http://code.jquery.com/jquery-1.7.js"type="text/javascript"></script>
 
 <!--  우인규 기본 JS -->
 <script src="http://code.jquery.com/jquery-1.7.js"  type="text/javascript"></script>
@@ -29,7 +33,11 @@
     src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript"
     src="js/jquery-fileupload/jquery.fileupload.js"></script>
-<script type="text/javascript" src="js/myuploadfunction.js"></script>
+
+<!-- 기능ㅂ -->
+<script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
+<script src="js/text.js"></script> <!--이혜인 text 코드  -->
+<script src="js/test09.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
 
 <!-- 우인규 바탕 코드 -->
 <script src="js/Edit.js"></script>
