--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -4,27 +4,21 @@
 <meta charset="utf-8">
 <title>web04test</title>
 
+<script src="js/jquery-1.11.2.js"  type="text/javascript"></script>
 <!-- 우인규 기본 CSS -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/Edit.css">
 <!-- 정준호:이미지 업로드css -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
-<script src="js/myuploadfunction.js"></script> <!-- 정준호:이미지 업로드js -->
     
-<!-- 우인규 : 기본 바탕js -->
-<script src="http://code.jquery.com/jquery-1.7.js"type="text/javascript"></script>
-
-<!--  우인규 기본 JS -->
-<script src="http://code.jquery.com/jquery-1.7.js"  type="text/javascript"></script>
 <!-- 고유식:드래그 관련 js -->
-<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+<script src="js/jquery-1.7.js"  type="text/javascript"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
-<script
-    src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
+<script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
-<script
-    src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
+<script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
+<script src="js/jquery-noConflict.js"  type="text/javascript"></script>
 <!-- 정준호:이미지 업로드js -->
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript"
@@ -39,14 +33,6 @@
 <script src="js/text.js"></script> <!--이혜인 text 코드  -->
 <script src="js/test09.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
 
-<!-- 우인규 바탕 코드 -->
-<script src="js/Edit.js"></script>
-<!--이혜인 text 코드  -->
-<script src="js/text.js"></script>
-<!-- 고유식 코드 shape, 기본 코드-->
-<script src="js/test09.js"></script>
-<!-- 정준호:이미지 업로드js -->
-<script src="js/myuploadfunction.js"></script>
 
 <style type="text/css">
 .pnt {
