--- a/web4test/src/main/webapp/test/index09.html
+++ b/web4test/src/main/webapp/test/index09.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<title>web04test</title>
-	<!--<script src="http://code.jquery.com/jquery-1.7.js" type="text/javascript"></script>-->
+	<script src="js/jquery-1.11.2.js"></script>
 	<script src="js/jquery-1.7.js"></script>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<!--<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />-->
