--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -33,6 +33,7 @@
 <script src="js/text.js"></script> <!--이혜인 text 코드  -->
 <script src="js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
 <script src="js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/myuploadfunction.js"></script>
 
 
 
