--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -11,6 +11,7 @@
 <!-- 정준호:이미지 업로드css -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
+<link rel="stylesheet" href="css/upload.css">
     
 <!-- 고유식:드래그 관련 js -->
 <script src="js/jquery-1.7.js"  type="text/javascript"></script>
@@ -38,8 +39,11 @@
 
 
 <style type="text/css">
-.pnt {
-    cursor: pointer;
+.modal .modal-body {
+    width: 900px;
+    max-height: 420px;
+    overflow-y: auto;
+    text-align: center;
 }
 </style>
 
@@ -59,21 +63,18 @@
                 </div>
                 <!-- body -->
                 <div id="modal-div" class="modal-body form-inline">
-
-                    <div style="width: 500px; padding: 20px">
-                        <input id="fileupload" type="file" name="files[]"
-                            data-url="/web4test/file.do" multiple>
-                    </div>
-
-                    <div id="img-div">
-                        <p>이미지라인</p>
-                    </div>
+                    <div id="img-div"></div>
                 </div>
 
                 <!-- Footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button id="modalAddBtn" type="button" class="btn btn-primary">확인</button>
+                <div class="modal-footer" style="text-align: left">
+                    <div>
+                    <span class="btn btn-default btn-file">
+                    upload
+                    <input id="fileupload" class="pnt" type="file" name="files[]"
+                             data-url="/web4test/file.do" multiple>
+                    </span>
+                    </div>
                 </div>
             </div>
         </div>
