--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -11,34 +11,39 @@
 <!-- 정준호:이미지 업로드css -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
+<link rel="stylesheet" href="css/upload.css">
     
 <!-- 고유식:드래그 관련 js -->
-<script src="../pro/js/jquery-1.7.js"  type="text/javascript"></script>
+<script src="js/jquery-1.7.js"  type="text/javascript"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
-<script src="../pro/js/jquery-noConflict.js"  type="text/javascript"></script>
+<script src="js/jquery-noConflict.js"  type="text/javascript"></script>
 <!-- 정준호:이미지 업로드js -->
-<script type="text/javascript" src="../pro/js/bootstrap.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
+    src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/jquery.iframe-transport.js"></script>
+    src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/jquery.fileupload.js"></script>
+    src="js/jquery-fileupload/jquery.fileupload.js"></script>
 
 <!-- 기능ㅂ -->
 <script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
-<script src="../pro/js/text.js"></script> <!--이혜인 text 코드  -->
-<script src="../pro/js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
-<script src="../pro/js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/text.js"></script> <!--이혜인 text 코드  -->
+<script src="js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/myuploadfunction.js"></script>
 
 
 
 <style type="text/css">
-.pnt {
-    cursor: pointer;
+.modal .modal-body {
+    width: 900px;
+    max-height: 420px;
+    overflow-y: auto;
+    text-align: center;
 }
 </style>
 
@@ -212,7 +217,6 @@
 						class="fa fa-spinner fa-spin"></i></span>
 				</button>
 			</div>
-
 
 
 
@@ -1464,6 +1468,4 @@
 	</div>
 
 
-</body>
-</html>
 </html>
