--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -52,14 +52,17 @@
 
 <!-- 2번 추가 -->
 <div class= "pres">
-<button class ="pres-b">b</button>
-<button class ="pres-f">f</button>
+<div class = "pres-t"><i class="fa fa-arrow-up"></i></div>
+<div class ="pres-b"><i class="fa fa-arrow-left"></i></div>
+<div class ="pres-f"><i class="fa fa-arrow-right"></i></div>
+<div class = "pres-bb"><i class="fa fa-arrow-down"></i></div>
 </div>
 <div class="pres-exit">
 <i class="fa fa-times fa-2x"></i>
 </div>
 <!-- 3번 추가 -->
-<div class ="slid-plus"><i class="fa fa-plus-circle fa-3x" ></i></div>
+<div class ="slid-plus-hor"><i class="fa fa-plus-circle fa-3x" ></i></div>
+<div class ="slid-plus-ver"><i class="fa fa-plus-circle fa-3x" ></i></div>
 	<!-- 준호형 추가 -->
 	<!-- 모달 -->
 	<div class="modal fade" id="layerpop">
