--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -101,8 +101,8 @@
 	
 	<!--  추가 1번  -->
 	<div class="preview-ep">
-		<button class="preview-edi">e</button>
-		<button class="preview-pre">p</button>
+		<div class="preview-edi"><i class="fa fa-pencil-square-o  fa-3x"></i></div>
+		<div class="preview-pre"><i class="fa fa-desktop  fa-3x"></i></div>
 
 	</div>
 
