--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -31,6 +31,7 @@
 
 <!-- 기능ㅂ -->
 <script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
+<script srs="js/slide.js"</script> <!-- 우인규 코드 slide 기본 코 -->
 <script src="js/text.js"></script> <!--이혜인 text 코드  -->
 <script src="js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
 <script src="js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
