--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -250,10 +250,10 @@
 					<!-- 문제1 -->
 					<div class="slides" style="width: 960px; height: 700px;">
 						<section class="overflowing present has-light-background"
-							data-background-color="#d0e0e3"
+							data-background-color="#ffffff"
 							data-id="0279c11631561889345ddf52a9453fd5"
 							style="display: block;" data-index-h="0" style="display: block;">
-						</section>
+						</section><!-- "#d0e0e3" -->
 					</div>
 					<div class="progress" style="display: none;">
 						<span></span>
