--- a/web4test/src/main/webapp/edit/Edit.html
+++ b/web4test/src/main/webapp/edit/Edit.html
@@ -4,41 +4,50 @@
 <meta charset="utf-8">
 <title>web04test</title>
 
-<script src="../pro/js/jquery-1.11.2.js"  type="text/javascript"></script>
+<script src="js/jquery-1.11.2.js"  type="text/javascript"></script>
 <!-- 우인규 기본 CSS -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/Edit.css">
 <!-- 정준호:이미지 업로드css -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
+<link rel="stylesheet" href="css/upload.css">
     
 <!-- 고유식:드래그 관련 js -->
-<script src="../pro/js/jquery-1.7.js"  type="text/javascript"></script>
+<script src="js/jquery-1.7.js"  type="text/javascript"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
-<script src="../pro/js/jquery-noConflict.js"  type="text/javascript"></script>
+<script src="js/jquery-noConflict.js"  type="text/javascript"></script>
 <!-- 정준호:이미지 업로드js -->
-<script type="text/javascript" src="../pro/js/bootstrap.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
+    src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/jquery.iframe-transport.js"></script>
+    src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript"
-    src="../pro/js/jquery-fileupload/jquery.fileupload.js"></script>
+    src="js/jquery-fileupload/jquery.fileupload.js"></script>
 
 <!-- 기능ㅂ -->
 <script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
-<script src="../pro/js/text.js"></script> <!--이혜인 text 코드  -->
-<script src="../pro/js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
-<script src="../pro/js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/slide.js"></script> <!-- 우인규 코드 slide 기본 코 -->
+<script src="js/text.js"></script> <!--이혜인 text 코드  -->
+<script src="js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/shape-edit.js"></script><!-- shape 편집 코드 이혜인 -->
+<script src="js/image-edit.js"></script><!-- shape 편집 코드 이혜인 -->
+<script src="js/myuploadfunction.js"></script>
+
 
 
 
 <style type="text/css">
-.pnt {
-    cursor: pointer;
+.modal .modal-body {
+    width: 900px;
+    max-height: 420px;
+    overflow-y: auto;
+    text-align: center;
 }
 </style>
 
@@ -47,14 +56,17 @@
 
 <!-- 2번 추가 -->
 <div class= "pres">
-<button class ="pres-b">b</button>
-<button class ="pres-f">f</button>
+<div class = "pres-t"><i class="fa fa-arrow-up"></i></div>
+<div class ="pres-b"><i class="fa fa-arrow-left"></i></div>
+<div class ="pres-f"><i class="fa fa-arrow-right"></i></div>
+<div class = "pres-bb"><i class="fa fa-arrow-down"></i></div>
 </div>
 <div class="pres-exit">
 <i class="fa fa-times fa-2x"></i>
 </div>
 <!-- 3번 추가 -->
-<div class ="slid-plus"><i class="fa fa-plus-circle fa-3x" ></i></div>
+<div class ="slid-plus-hor"><i class="fa fa-plus-circle fa-3x" ></i></div>
+<div class ="slid-plus-ver"><i class="fa fa-plus-circle fa-3x" ></i></div>
 	<!-- 준호형 추가 -->
 	<!-- 모달 -->
 	<div class="modal fade" id="layerpop">
@@ -93,8 +105,8 @@
 	
 	<!--  추가 1번  -->
 	<div class="preview-ep">
-		<button class="preview-edi">e</button>
-		<button class="preview-pre">p</button>
+		<div class="preview-edi"><i class="fa fa-pencil-square-o  fa-3x"></i></div>
+		<div class="preview-pre"><i class="fa fa-desktop  fa-3x"></i></div>
 
 	</div>
 
@@ -359,8 +371,7 @@
 							data-option-type="text-size">
 							<h4 class="toolbar-option-label">Text Scale</h4>
 							<div class="stepper">
-								<input class="font size-box" type=number value=20> <input
-									class="font size-scroll" type=range min="0" max="100" step="1">
+								<input class="font size-box" type=number value=20> 
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -396,9 +407,7 @@
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-								<input class="padding size-box" type=number> <input
-									class="padding size-scroll" type=range min="0" max="100"
-									step="1">
+								<input class="padding size-box" type=number> 
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -407,7 +416,7 @@
 							data-group-type="border-css">
 							<div class="text-toolbar-group-trigger">
 								<span class="label">Border</span> <input type="checkbox"
-									id="borderCheckbox" class="border checkbox" name="border"
+									class="border checkbox" name="border"
 									value="border">
 							</div>
 							<div class="text-toolbar-group-options">
@@ -421,18 +430,14 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">Width</h4>
 										<div class="stepper">
-											<input class="lineWidth size-box" type=number> <input
-												class="lineWidth size-scroll" type=range min="1" max="200"
-												step="1">
+											<input class="lineWidth size-box" type=number>
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-stepper"
 										data-option-type="border-radius">
 										<h4 class="toolbar-option-label">Radius</h4>
 										<div class="stepper">
-											<input class="lineRadius size-box" type=number> <input
-												class="lineRadius size-scroll" type=range min="0" max="200"
-												step="1">
+											<input class="lineRadius size-box" type=number> 
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -496,9 +501,9 @@
 							data-option-type="opacity">
 							<h4 class="toolbar-option-label">Opacity</h4>
 							<div class="range">
-								<input class="opacity size-box" type=number value=1.00>
-								<input class="opacity size-scroll" type=range min="0" max="100"
-									step="1">
+								<input class="image opacity size-box" type=number value=1.00>
+								<input class="image opacity size-scroll" type=range min="0" max="1.00"
+									step="0.1">
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -520,14 +525,14 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">Width</h4>
 										<div class="stepper">
-											<input type="image" class="stepper-number">
+											<input type="number" class="image border-width size-box">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-stepper"
 										data-option-type="border-radius">
 										<h4 class="toolbar-option-label">Radius</h4>
 										<div class="stepper">
-											<input type="image" class="stepper-number">
+											<input type="number" class="image border-radius size-box">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -619,9 +624,9 @@
 							data-option-type="opacity">
 							<h4 class="toolbar-option-label">OPACITY</h4>
 							<div class="range">
-								<input class="opacity size-box" type=number value=1.00>
-								<input class="opacity size-scroll" type=range min="0" max="100"
-									step="1">
+								<input class="shape opacity size-box" type=number value=1.00>
+								<input class="shape opacity size-scroll" type=range min="0" max="1.00"
+									step="0.1">
 							</div>
 						</div>
 
@@ -642,7 +647,7 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">WIDTH</h4>
 										<div class="stepper">
-											<input type="shape" class="stepper-number">
+											<input type="shape border-width size-box" class="stepper-number">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -748,8 +753,7 @@
 							data-option-type="iframe-size">
 							<h4 class="toolbar-option-label">iframe Scale</h4>
 							<div class="stepper">
-								<input class="font size-box" type=number value=20> <input
-									class="font size-scroll" type=range min="0" max="100" step="1">
+								<input class="iframe scale size-box" type=number value=20> 
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -776,8 +780,8 @@
 							data-option-type="opacity">
 							<h4 class="toolbar-option-label">Opacity</h4>
 							<div class="range">
-								<input class="opacity size-box" type=number value=1.00>
-								<input class="opacity size-scroll" type=range min="0" max="100"
+								<input class="iframe opacity size-box" type=number value=1.00>
+								<input class="iframe opacity size-scroll" type=range min="0" max="100"
 									step="1">
 							</div>
 						</div>
@@ -785,9 +789,7 @@
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-								<input class="padding size-box" type=number> <input
-									class="padding size-scroll" type=range min="0" max="100"
-									step="1">
+								<input class="iframe padding size-box" type=number> 
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -809,14 +811,14 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">Width</h4>
 										<div class="stepper">
-											<input type="iframe" class="stepper-number">
+											<input type="iframe border-width size-box" class="stepper-number">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-stepper"
 										data-option-type="border-radius">
 										<h4 class="toolbar-option-label">Radius</h4>
 										<div class="stepper">
-											<input type="iframe" class="stepper-number">
+											<input type="iframe border-radius size-box" class="stepper-number">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -1463,6 +1465,4 @@
 	</div>
 
 
-</body>
-</html>
 </html>
