--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -4,39 +4,49 @@
 <meta charset="utf-8">
 <title>web04test</title>
 
-<script src="js/jquery-1.11.2.js"  type="text/javascript"></script>
+<script src="js/jquery-1.11.2.js" type="text/javascript"></script>
 <!-- 우인규 기본 CSS -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/Edit.css">
 <!-- 정준호:이미지 업로드css -->
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
 <link rel="stylesheet" href="css/upload.css">
-    
+
 <!-- 고유식:드래그 관련 js -->
-<script src="js/jquery-1.7.js"  type="text/javascript"></script>
+<script src="js/jquery-1.7.js" type="text/javascript"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
-<script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
+<script
+	src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
-<script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
-<script src="js/jquery-noConflict.js"  type="text/javascript"></script>
+<script
+	src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
+<script src="js/jquery-noConflict.js" type="text/javascript"></script>
 <!-- 정준호:이미지 업로드js -->
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript"
-    src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
+	src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 <script type="text/javascript"
-    src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
+	src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript"
-    src="js/jquery-fileupload/jquery.fileupload.js"></script>
+	src="js/jquery-fileupload/jquery.fileupload.js"></script>
 
 <!-- 기능ㅂ -->
-<script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
-<script src="js/slide.js"></script> <!-- 우인규 코드 slide 기본 코 -->
-<script src="js/text.js"></script> <!--이혜인 text 코드  -->
-<script src="js/basic.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
-<script src="js/shape.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
-<script src="js/shape-edit.js"></script><!-- shape 편집 코드 이혜인 -->
-<script src="js/image-edit.js"></script><!-- shape 편집 코드 이혜인 -->
+<script src="js/Edit.js"></script>
+<!-- 우인규 코드 html 기본 코드 -->
+<script src="js/slide.js"></script>
+<!-- 우인규 코드 slide 기본 코 -->
+<script src="js/text.js"></script>
+<!--이혜인 text 코드  -->
+<script src="js/basic.js"></script>
+<!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/shape.js"></script>
+<!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/shape-edit.js"></script>
+<!-- shape 편집 코드 이혜인 -->
+<script src="js/image-edit.js"></script>
+<!-- shape 편집 코드 이혜인 -->
 <script src="js/myuploadfunction.js"></script>
 
 
@@ -44,29 +54,41 @@
 
 <style type="text/css">
 .modal .modal-body {
-    width: 900px;
-    max-height: 420px;
-    overflow-y: auto;
-    text-align: center;
+	width: 900px;
+	max-height: 420px;
+	overflow-y: auto;
+	text-align: center;
 }
 </style>
 
 </head>
 <body>
 
-<!-- 2번 추가 -->
-<div class= "pres">
-<div class = "pres-t"><i class="fa fa-arrow-up"></i></div>
-<div class ="pres-b"><i class="fa fa-arrow-left"></i></div>
-<div class ="pres-f"><i class="fa fa-arrow-right"></i></div>
-<div class = "pres-bb"><i class="fa fa-arrow-down"></i></div>
-</div>
-<div class="pres-exit">
-<i class="fa fa-times fa-2x"></i>
-</div>
-<!-- 3번 추가 -->
-<div class ="slid-plus-hor"><i class="fa fa-plus-circle fa-3x" ></i></div>
-<div class ="slid-plus-ver"><i class="fa fa-plus-circle fa-3x" ></i></div>
+	<!-- 2번 추가 -->
+	<div class="pres">
+		<div class="pres-t">
+			<i class="fa fa-arrow-up"></i>
+		</div>
+		<div class="pres-b">
+			<i class="fa fa-arrow-left"></i>
+		</div>
+		<div class="pres-f">
+			<i class="fa fa-arrow-right"></i>
+		</div>
+		<div class="pres-bb">
+			<i class="fa fa-arrow-down"></i>
+		</div>
+	</div>
+	<div class="pres-exit">
+		<i class="fa fa-times fa-2x"></i>
+	</div>
+	<!-- 3번 추가 -->
+	<div class="slid-plus-hor">
+		<i class="fa fa-plus-circle fa-3x"></i>
+	</div>
+	<div class="slid-plus-ver">
+		<i class="fa fa-plus-circle fa-3x"></i>
+	</div>
 	<!-- 준호형 추가 -->
 	<!-- 모달 -->
 	<div class="modal fade" id="layerpop">
@@ -102,15 +124,19 @@
 	</div>
 	<!-- 준호형  -->
 	<div class='page-wrapper'>
-	
-	<!--  추가 1번  -->
-	<div class="preview-ep">
-		<div class="preview-edi"><i class="fa fa-pencil-square-o  fa-3x"></i></div>
-		<div class="preview-pre"><i class="fa fa-desktop  fa-3x"></i></div>
 
-	</div>
+		<!--  추가 1번  -->
+		<div class="preview-ep">
+			<div class="preview-edi">
+				<i class="fa fa-pencil-square-o  fa-3x"></i>
+			</div>
+			<div class="preview-pre">
+				<i class="fa fa-desktop  fa-3x"></i>
+			</div>
 
-	<!-- 추가 1번  -->
+		</div>
+
+		<!-- 추가 1번  -->
 		<div class='preview-controls'>
 			<button class="preview-edit">
 				<i class="fa fa-pencil"></i>
@@ -253,7 +279,8 @@
 							data-background-color="#ffffff"
 							data-id="0279c11631561889345ddf52a9453fd5"
 							style="display: block;" data-index-h="0" style="display: block;">
-						</section><!-- "#d0e0e3" -->
+						</section>
+						<!-- "#d0e0e3" -->
 					</div>
 					<div class="progress" style="display: none;">
 						<span></span>
@@ -371,7 +398,7 @@
 							data-option-type="text-size">
 							<h4 class="toolbar-option-label">Text Scale</h4>
 							<div class="stepper">
-								<input class="font size-box" type=number value=20> 
+								<input class="font size-box" type=number value=20>
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -407,7 +434,7 @@
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-								<input class="padding size-box" type=number> 
+								<input class="padding size-box" type=number>
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -416,8 +443,7 @@
 							data-group-type="border-css">
 							<div class="text-toolbar-group-trigger">
 								<span class="label">Border</span> <input type="checkbox"
-									class="border checkbox" name="border"
-									value="border">
+									class="border checkbox" name="border" value="border">
 							</div>
 							<div class="text-toolbar-group-options">
 								<div class="text-toolbar-group-options-inner">
@@ -437,7 +463,7 @@
 										data-option-type="border-radius">
 										<h4 class="toolbar-option-label">Radius</h4>
 										<div class="stepper">
-											<input class="lineRadius size-box" type=number> 
+											<input class="lineRadius size-box" type=number>
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -502,8 +528,8 @@
 							<h4 class="toolbar-option-label">Opacity</h4>
 							<div class="range">
 								<input class="image opacity size-box" type=number value=1.00>
-								<input class="image opacity size-scroll" type=range min="0" max="1.00"
-									step="0.1">
+								<input class="image opacity size-scroll" type=range min="0"
+									max="1.00" step="0.1">
 							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
@@ -625,8 +651,8 @@
 							<h4 class="toolbar-option-label">OPACITY</h4>
 							<div class="range">
 								<input class="shape opacity size-box" type=number value=1.00>
-								<input class="shape opacity size-scroll" type=range min="0" max="1.00"
-									step="0.1">
+								<input class="shape opacity size-scroll" type=range min="0"
+									max="1.00" step="0.1">
 							</div>
 						</div>
 
@@ -647,7 +673,8 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">WIDTH</h4>
 										<div class="stepper">
-											<input type="shape border-width size-box" class="stepper-number">
+											<input type="shape border-width size-box"
+												class="stepper-number">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -735,25 +762,8 @@
 						<div class="toolbar-option toolbar-select"
 							data-option-type="iframe-type" style="heigh: 82px;">
 							<h4 class="toolbar-option-label">iframe</h4>
-							<div class="toolbar-select-trigger">
-								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="32"
-									height="32" preserveAspectRatio="xMidYMid" viewBox="0 0 32 32">
-                                    <rect width="32" height="32"
-										fill="#ffffff"></rect></svg>
-							</div>
-						</div>
-
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
-
-						<div class="toolbar-option toolbar-color"
-							data-option-type="iframe-color">
-							<h4 class="toolbar-option-label">COLOR</h4>
-							<div class="toolbar-color-trigger">
-								<input class="iframe-colorinput" type="color">
-								<div class="toolbar-color-reset icon i-undo"
-									data-tooltip="Use default color" data-tooltip-delay="500"></div>
-							</div>
+							<textarea class="toolbar-text-input" maxlength="2000"
+								placeholder="URL or <iframe>..."></textarea>
 						</div>
 
 						<div class="toolbar-option toolbar-divider"
@@ -764,8 +774,20 @@
 							<h4 class="toolbar-option-label">OPACITY</h4>
 							<div class="range">
 								<input class="iframe opacity size-box" type=number value=1.00>
-								<input class="iframe opacity size-scroll" type=range min="0" max="1.00"
-									step="0.1">
+								<input class="iframe opacity size-scroll" type=range min="0"
+									max="1.00" step="0.1">
+							</div>
+						</div>
+
+						<div class="toolbar-option toolbar-divider"
+							data-option-type="divider"></div>
+
+
+						<div id="padding" class="toolbar-option toolbar-stepper"
+							data-option-type="padding">
+							<h4 class="toolbar-option-label">Padding</h4>
+							<div class="stepper">
+								<input class="padding size-box" type=number>
 							</div>
 						</div>
 
@@ -786,7 +808,8 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">WIDTH</h4>
 										<div class="stepper">
-											<input type="iframe border-width size-box" class="stepper-number">
+											<input type="iframe border-width size-box"
+												class="stepper-number">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -806,29 +829,6 @@
 						<div class="toolbar-option toolbar-divider"
 							data-option-type="divider"></div>
 
-						<div class="toolbar-option toolbar-group"
-							data-group-type="border-css">
-							<div class="iframe-toolbar-group-trigger-link">
-								<h4 class="toolbar-option-label">
-									LINK <input type="checkbox" class="iframe-checkbox">
-								</h4>
-							</div>
-							<div class="iframe-toolbar-group-options-link">
-								<div class="iframe-toolbar-group-options-inner">
-									<div class="toolbar-option toolbar-stepper"
-										data-option-type="border-width">
-										<div class="stepper">
-											<input type="iframe" class="stepper-number"
-												placeholder="http://">
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-
-						<div class="toolbar-option toolbar-divider"
-							data-option-type="divider"></div>
 
 
 						<div class="toolbar-option toolbar-multi"
@@ -1459,6 +1459,4 @@
 			<div class="toolbar-panel-arrow" style="top: 15px;"></div>
 		</div>
 	</div>
-
-
 </html>
