사이드바 Edit.html/Edit.css 수

--- a/web4test/src/main/webapp/pro/Edit.html
+++ b/web4test/src/main/webapp/pro/Edit.html
@@ -673,8 +673,8 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">WIDTH</h4>
 										<div class="stepper">
-											<input type="shape border-width size-box"
-												class="stepper-number">
+											<input type="text"
+												class="shape border-width size-box">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
@@ -698,7 +698,7 @@
 							data-group-type="border-css">
 							<div class="shape-toolbar-group-trigger-link">
 								<h4 class="toolbar-option-label">
-									LINK <input type="checkbox" class="shape-checkbox">
+									LINK <input type="checkbox" class="shape-link-checkbox">
 								</h4>
 							</div>
 							<div class="shape-toolbar-group-options-link">
@@ -706,8 +706,7 @@
 									<div class="toolbar-option toolbar-stepper"
 										data-option-type="border-width">
 										<div class="stepper">
-											<input type="shape" class="stepper-number"
-												placeholder="http://">
+									 <input type="text" class="shape-link-input">
 										</div>
 									</div>
 								</div>
@@ -787,7 +786,7 @@
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-								<input class="padding size-box" type=number>
+								<input class="iframe padding size-box" type=number>
 							</div>
 						</div>
 
@@ -808,8 +807,8 @@
 										data-option-type="border-width">
 										<h4 class="toolbar-option-label">WIDTH</h4>
 										<div class="stepper">
-											<input type="iframe border-width size-box"
-												class="stepper-number">
+											<input type="number"
+												class="iframe border-width size-box">
 										</div>
 									</div>
 									<div class="toolbar-option toolbar-color"
